--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code"
+name = "aoc"
 version = "0.1.0"
 authors = ["Nick Saika <nicksaika@gmail.com>"]
 edition = "2018"
