--- a/2019/Cargo.toml
+++ b/2019/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Nick Saika <nicksaika@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+num = "0.2"
+rand = "0.7"
 
 [profile.release]
 opt-level = "z"
